src/objects/Blacklist__c.object
<CustomObject>
    <fields>
        <fullName>MovieId__c</fullName>
        <label>MovieId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalTitle__c</fullName>
        <label>Original Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PosterPath__c</fullName>
        <label>Poster Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>Release Date</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Blacklist</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blacklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>